--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "angular-bootstrap-calendar": "^1.0.0",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
     "bootstrap-vue": "^2.22.0",
